elc still not work well

--- a/electronic/.settings/projcfg.ini
+++ b/electronic/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Mon Jun 24 08:23:52 GMT+08:00 2024
+#Thu Jun 27 11:15:42 GMT+08:00 2024
 project_type=rtt
 chip_name=STM32F407VE
 cpu_name=None
@@ -17,6 +17,6 @@ tool_chain=gcc
 uart_name=uart1
 tx_pin_name=PA9
 rtt_nano_path=
-output_project_path=D\:/RT-ThreadStudio/workspace
+output_project_path=D\:\\RT-ThreadStudio\\workspace
 hardware_adapter=J-Link
 project_name=mqtt
